Issue 3409 maven-war-plugin & maven-compiler-plugin version changed to 3.8.1 and added compilerArgs
Issue 3409 maven-war-plugin & maven-compiler-plugin version changed to 3.8.1 and added compilerArgs